--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,196 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+/*-----------for all component-----------*/
+.flex{
+  display: flex;
+}
+.flex-col{
+  flex-direction: column;
+}
+.flex-center{
+  justify-content: center;
+  align-items: center;
+}
+.cursor{
+  cursor: pointer;
+}
+/*----------side bar component ----------*/
+.sidebar{
+  width: 15vw;
+  height: 100%;
+  background-color:#01061f;
+  position: fixed;
+}
+#logo-container{
+  padding: 40px;
+  z-index: 1;
+}
+.menu{
+  justify-content: space-around;
+  z-index: -1;
+  overflow: scroll;
+  
+}
+.menu::-webkit-scrollbar {
+  display: none;
+}
+.menu div i{
+  font-size: 20px;
+  margin-right: 5px;
+}
+.menu div{
+  height: 50px;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  padding-left: 15px;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+.menu div:hover{
+  background-color: rgba(255,255,255,0.4);;
+}
+#sliderbar-footer{
+  width: 75%;
+  height:40px;
+  padding: 10px;
+  padding-left: 20px;
+  margin: auto;
+  margin-bottom: 20px;
+  color:white;
+  background-color:rgba(255,255,255,0.1);
+  border-radius: 2px;
+  z-index: 1;
+}
+/*------------content-container -------------*/
+.content-container{
+  width:40%;
+  background-color: white;
+  margin: auto;
+  border-radius: 5px;
+  padding-bottom: 40px;
+}
+.heading{
+  padding: 25px;
+}
+.heading p{
+  color: gray;
+  font-size: 16px;
+  font-family: serif;
+  line-height: 1.2;
+}
+.completed-sign{
+  margin-left: 25px;
+}
+.completed-sign div{
+  font-size: 20px;
+  color: white;
+  background-color: teal;
+  border-radius: 100%;
+  height: 50px;
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0px;
+}
+.line{
+  border:"1px 0px 0px 0px";
+  height: 50px;
+  width: 3px;
+  margin: auto;
+  background-color: teal;
+}
+.completed-container{
+  margin-left: 20px;  
+}
+.heading-completed-sign{
+  font-size: 14px;
+  font-weight: bold;
+  font-family: sans-serif;
+  margin-bottom: 5px;
+}
+.paragraph-completed-sign{
+  font-size: 14px;
+  color:gray;
+  margin-top: 0px;
+  margin-bottom:  10px;
+}
+.view-store-btn{
+  color: teal;
+  margin-top: 0px;
+  font-size: 14px;
+  cursor: pointer;
+  font-weight: bold;
+}
+.add-address{
+  background-color: teal;
+  width:150px;
+  height: 40px;
+  border-radius: 5px;
+  margin-left: 80px;
+  margin-top: 20px;
+  border: none;
+}
+@media screen and (max-width:750px) {
+  .content-container{
+    width: 100%;
+    margin: 0px;
+    z-index: -1;
+  }
+}
+/*------------footer --------------*/
+.footer{
+  height: 80px;
+  justify-content: space-around;
+  margin-left: 250px;
+  align-items: center;
+  border-top: 1px solid lightgrey;
+}
+.subscription-btn{
+  width:250px;
+  height: 70px;
+  margin-top: 20px;
+  border-radius: 5px;
+  background-color: orange;
+  color: white;
+  margin-right: 50px;
+}
+.subscription-btn div{
+  margin-left: 140px;
+}
+@media screen and (max-width:750px ) {
+  .footer{
+    display: none;
+  }
+}
+/*----------------mobile footer-----------*/
+.mobile-footer{
+  position: sticky;
+  top: 89vh;
+  height: 60px;
+  width: 100%;
+  justify-content: space-around;
+  background-color: #01061f
+}
+.mobile-footer div{
+  width:80px;
+  color: lightgrey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+.mobile-footer div:hover{
+  background-color: rgba(255,255,255,0.1);
 }
